# rpm

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cli/: mod.rs
manager/: Cargo.toml
manager/src/: app.rs  banner.rs  engine.rs  lib.rs  packge.rs
manager/src/config/: behavior.rs  package.rs  theme.rs
tui/: Cargo.toml
tui/src/: app.rs  io.rs  lib.rs  main.rs  router.rs
tui/src/cli/: clap.rs  mod.rs
tui/src/config/: key.rs  mod.rs
tui/src/event/: events.rs  key.rs
tui/src/handlers/: help_menu.rs  home.rs  input.rs  mod.rs
tui/src/ui/: help_page.rs  home_page.rs  mod.rs  page.rs  search_page.rs
