[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["Matheus barbieri - https://github.com/MSBarbieri"]
repository = "https://github.com/MSBarbieri/rpm"
description = "binary package manager using git repositories"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manager = { version = "^0.1", path = "../manager", optional = false }
tui = { version = "^0.1", path = "../tui", optional = false }


# parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"
unicode-width = "0.1"

[[bin]]
bench = false
path = "src/main.rs"
name = "rpm"