[package]
name = "rpm"
version = "0.1.0"
edition = "2018"
authors = ["Matheus barbieri - https://github.com/MSBarbieri"]
repository = "https://github.com/MSBarbieri/rpm"
description = "binary package manager using git repositories"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manager = { version = "^0.1", path = "../manager", optional = false }

# parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"
unicode-width = "0.1"

# async
tokio = { version = "1.13", features = ["full"] }

# ui
tui = { version = "^0.16", default-features = false, features = ["crossterm","termion","serde"] }
crossterm = "^0.22"
clap = "2.33"
arboard = "2.0"

#utils
dotenv = "^0.15"
dotenv_macros = { version = "^0.10", optional = true }
dirs = "4.0"
thiserror = "^1.0"
rand = "^0.8"
anyhow = "1.0"
backtrace ="0.3"
async-recursion = "0.2"

[[bin]]
bench = false
path = "src/main.rs"
name = "rpm"