[package]
name = "rpm_tui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manager = { version = "^0.1", path = "../manager", optional = false }
tokio = { version = "1.13", features = ["full"] }

# ui
tui = { version = "^0.16", default-features = false, features = ["crossterm","termion","serde"] }
crossterm = "^0.22"

#utils
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

dotenv = "^0.15"
dotenv_macros = { version = "^0.10", optional = true }
dirs = "4.0"
anyhow = "1.0"
backtrace ="0.3"